# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
1-intro_and_setup/: HomeWork_1.ipynb  nyc.ipynb  nyc2.ipynb  nyc3.ipynb
1-intro_and_setup/models_nyc_taxi_no_leakage/nyc_taxi_no_leakage_20260203_190610/: best_model.pkl  model_card.json  predict_trip_duration.py  preprocessor.pkl  requirements.json
