[project]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
